# opengl_fun

./: .gitignore  CMakeLists.txt
include/: colorDef.h  shader.h
src/: main.cpp
src/shaders/: fragShader.fs  vertShader.vs
